// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Containers PageInternal PageBodyContainerAccount Forms FormContainerProfile shallow renders correctly 1`] = `
<FormProfile
  currentFormBool={true}
  editForm={false}
  handleInputChange={[Function]}
  headerWidthBufferRight={10}
  heightRef={[MockFunction]}
  inputs={
    Object {
      "profileEmail": Object {
        "errorMessage": "",
        "id": "profileEmail",
        "parentId": "profileForm",
        "value": "test@test.com",
      },
      "profileEmailAdditional": Object {
        "errorMessage": "",
        "id": "profileEmailAdditional",
        "parentId": "profileForm",
        "value": "",
      },
      "profileName": Object {
        "errorMessage": "",
        "id": "profileName",
        "parentId": "profileForm",
        "value": "testName",
      },
      "profilePhone": Object {
        "errorMessage": "",
        "id": "profilePhone",
        "parentId": "profileForm",
        "value": "239-555-0000",
      },
    }
  }
  mediaWidth={874}
  rowHeight={60}
  rowHeightBuffer={18}
  rowWidthIndent={10}
/>
`;

exports[`Containers PageInternal PageBodyContainerAccount Forms FormContainerProfile shallow renders correctly and calls handleInputChange, with email in use internal error 1`] = `
<FormProfile
  currentFormBool={true}
  editForm={false}
  handleInputChange={[Function]}
  headerWidthBufferRight={10}
  heightRef={[MockFunction]}
  inputs={
    Object {
      "profileEmail": Object {
        "errorMessage": "An account using this email already exists. Please use a different email.",
        "id": "profileEmail",
        "parentId": "profileForm",
        "value": "test@test.com",
      },
      "profileEmailAdditional": Object {
        "errorMessage": "",
        "id": "profileEmailAdditional",
        "parentId": "profileForm",
        "value": "",
      },
      "profileName": Object {
        "errorMessage": "",
        "id": "profileName",
        "parentId": "profileForm",
        "value": "",
      },
      "profilePhone": Object {
        "errorMessage": "",
        "id": "profilePhone",
        "parentId": "profileForm",
        "value": "",
      },
    }
  }
  mediaWidth={874}
  rowHeight={60}
  rowHeightBuffer={18}
  rowWidthIndent={10}
/>
`;

exports[`Containers PageInternal PageBodyContainerAccount Forms FormContainerProfile shallow renders correctly and calls handleInputChange, with invalid email error 1`] = `
<FormProfile
  currentFormBool={true}
  editForm={false}
  handleInputChange={[Function]}
  headerWidthBufferRight={10}
  heightRef={[MockFunction]}
  inputs={
    Object {
      "profileEmail": Object {
        "errorMessage": "Please enter a valid email address.",
        "id": "profileEmail",
        "parentId": "profileForm",
        "value": "test",
      },
      "profileEmailAdditional": Object {
        "errorMessage": "",
        "id": "profileEmailAdditional",
        "parentId": "profileForm",
        "value": "",
      },
      "profileName": Object {
        "errorMessage": "",
        "id": "profileName",
        "parentId": "profileForm",
        "value": "",
      },
      "profilePhone": Object {
        "errorMessage": "",
        "id": "profilePhone",
        "parentId": "profileForm",
        "value": "",
      },
    }
  }
  mediaWidth={874}
  rowHeight={60}
  rowHeightBuffer={18}
  rowWidthIndent={10}
/>
`;

exports[`Containers PageInternal PageBodyContainerAccount Forms FormContainerProfile shallow renders correctly and calls handleInputChange, with invalid email error and email additional input 1`] = `
<FormProfile
  currentFormBool={true}
  editForm={false}
  handleInputChange={[Function]}
  headerWidthBufferRight={10}
  heightRef={[MockFunction]}
  inputs={
    Object {
      "profileEmail": Object {
        "errorMessage": "",
        "id": "profileEmail",
        "parentId": "profileForm",
        "value": "",
      },
      "profileEmailAdditional": Object {
        "errorMessage": "Please enter a valid email address.",
        "id": "profileEmailAdditional",
        "parentId": "profileForm",
        "value": "test",
      },
      "profileName": Object {
        "errorMessage": "",
        "id": "profileName",
        "parentId": "profileForm",
        "value": "",
      },
      "profilePhone": Object {
        "errorMessage": "",
        "id": "profilePhone",
        "parentId": "profileForm",
        "value": "",
      },
    }
  }
  mediaWidth={874}
  rowHeight={60}
  rowHeightBuffer={18}
  rowWidthIndent={10}
/>
`;

exports[`Containers PageInternal PageBodyContainerAccount Forms FormContainerProfile shallow renders correctly and calls handleInputChange, with invalid phone error 1`] = `
<FormProfile
  currentFormBool={true}
  editForm={false}
  handleInputChange={[Function]}
  headerWidthBufferRight={10}
  heightRef={[MockFunction]}
  inputs={
    Object {
      "profileEmail": Object {
        "errorMessage": "",
        "id": "profileEmail",
        "parentId": "profileForm",
        "value": "",
      },
      "profileEmailAdditional": Object {
        "errorMessage": "",
        "id": "profileEmailAdditional",
        "parentId": "profileForm",
        "value": "",
      },
      "profileName": Object {
        "errorMessage": "",
        "id": "profileName",
        "parentId": "profileForm",
        "value": "",
      },
      "profilePhone": Object {
        "errorMessage": "Please enter a valid mobile phone number.",
        "id": "profilePhone",
        "parentId": "profileForm",
        "value": "000-000-0000",
      },
    }
  }
  mediaWidth={874}
  rowHeight={60}
  rowHeightBuffer={18}
  rowWidthIndent={10}
/>
`;

exports[`Containers PageInternal PageBodyContainerAccount Forms FormContainerProfile shallow renders correctly and calls handleInputChange, with no email error 1`] = `
<FormProfile
  currentFormBool={true}
  editForm={false}
  handleInputChange={[Function]}
  headerWidthBufferRight={10}
  heightRef={[MockFunction]}
  inputs={
    Object {
      "profileEmail": Object {
        "errorMessage": "Please enter your email address.",
        "id": "profileEmail",
        "parentId": "profileForm",
        "value": "",
      },
      "profileEmailAdditional": Object {
        "errorMessage": "",
        "id": "profileEmailAdditional",
        "parentId": "profileForm",
        "value": "",
      },
      "profileName": Object {
        "errorMessage": "",
        "id": "profileName",
        "parentId": "profileForm",
        "value": "",
      },
      "profilePhone": Object {
        "errorMessage": "",
        "id": "profilePhone",
        "parentId": "profileForm",
        "value": "",
      },
    }
  }
  mediaWidth={874}
  rowHeight={60}
  rowHeightBuffer={18}
  rowWidthIndent={10}
/>
`;

exports[`Containers PageInternal PageBodyContainerAccount Forms FormContainerProfile shallow renders correctly and calls handleInputChange, with no name error 1`] = `
<FormProfile
  currentFormBool={true}
  editForm={false}
  handleInputChange={[Function]}
  headerWidthBufferRight={10}
  heightRef={[MockFunction]}
  inputs={
    Object {
      "profileEmail": Object {
        "errorMessage": "",
        "id": "profileEmail",
        "parentId": "profileForm",
        "value": "",
      },
      "profileEmailAdditional": Object {
        "errorMessage": "",
        "id": "profileEmailAdditional",
        "parentId": "profileForm",
        "value": "",
      },
      "profileName": Object {
        "errorMessage": "Please enter your name.",
        "id": "profileName",
        "parentId": "profileForm",
        "value": "",
      },
      "profilePhone": Object {
        "errorMessage": "",
        "id": "profilePhone",
        "parentId": "profileForm",
        "value": "",
      },
    }
  }
  mediaWidth={874}
  rowHeight={60}
  rowHeightBuffer={18}
  rowWidthIndent={10}
/>
`;

exports[`Containers PageInternal PageBodyContainerAccount Forms FormContainerProfile shallow renders correctly and calls handleInputChange, with no phone error 1`] = `
<FormProfile
  currentFormBool={true}
  editForm={false}
  handleInputChange={[Function]}
  headerWidthBufferRight={10}
  heightRef={[MockFunction]}
  inputs={
    Object {
      "profileEmail": Object {
        "errorMessage": "",
        "id": "profileEmail",
        "parentId": "profileForm",
        "value": "",
      },
      "profileEmailAdditional": Object {
        "errorMessage": "",
        "id": "profileEmailAdditional",
        "parentId": "profileForm",
        "value": "",
      },
      "profileName": Object {
        "errorMessage": "",
        "id": "profileName",
        "parentId": "profileForm",
        "value": "",
      },
      "profilePhone": Object {
        "errorMessage": "Please enter your mobile phone number.",
        "id": "profilePhone",
        "parentId": "profileForm",
        "value": "",
      },
    }
  }
  mediaWidth={874}
  rowHeight={60}
  rowHeightBuffer={18}
  rowWidthIndent={10}
/>
`;

exports[`Containers PageInternal PageBodyContainerAccount Forms FormContainerProfile shallow renders correctly and calls handleInputChange, with undefined error 1`] = `
<FormProfile
  currentFormBool={true}
  editForm={false}
  handleInputChange={[Function]}
  headerWidthBufferRight={10}
  heightRef={[MockFunction]}
  inputs={
    Object {
      "profileEmail": Object {
        "errorMessage": "",
        "id": "profileEmail",
        "parentId": "profileForm",
        "value": "",
      },
      "profileEmailAdditional": Object {
        "errorMessage": "",
        "id": "profileEmailAdditional",
        "parentId": "profileForm",
        "value": "",
      },
      "profileName": Object {
        "errorMessage": "",
        "id": "profileName",
        "parentId": "profileForm",
        "value": "",
      },
      "profilePhone": Object {
        "errorMessage": "Please try your request again. If unsuccessful on subsequent attempts, please contact customer service.",
        "id": "profilePhone",
        "parentId": "profileForm",
        "value": "000-000-0000",
      },
    }
  }
  mediaWidth={874}
  rowHeight={60}
  rowHeightBuffer={18}
  rowWidthIndent={10}
/>
`;

exports[`Containers PageInternal PageBodyContainerAccount Forms FormContainerProfile shallow renders correctly, with componentWillUpdate, componentDidUpdate, and componentWillUnmount 1`] = `
<FormProfile
  currentFormBool={true}
  editForm={false}
  handleInputChange={[Function]}
  headerWidthBufferRight={10}
  heightRef={[MockFunction]}
  inputs={
    Object {
      "profileEmail": Object {
        "errorMessage": "",
        "id": "profileEmail",
        "parentId": "profileForm",
        "value": "test@test.com",
      },
      "profileEmailAdditional": Object {
        "errorMessage": "",
        "id": "profileEmailAdditional",
        "parentId": "profileForm",
        "value": "test1@test.com",
      },
      "profileName": Object {
        "errorMessage": "",
        "id": "profileName",
        "parentId": "profileForm",
        "value": "testName",
      },
      "profilePhone": Object {
        "errorMessage": "",
        "id": "profilePhone",
        "parentId": "profileForm",
        "value": "239-555-0000",
      },
    }
  }
  mediaWidth={874}
  rowHeight={60}
  rowHeightBuffer={18}
  rowWidthIndent={10}
/>
`;

exports[`Containers PageInternal PageBodyContainerAccount Forms FormContainerProfile shallow renders correctly, with loading indicator 1`] = `
<FlexColumn
  alignItems={null}
  alignSelf={null}
  borderColorType="border"
  borderRadius={null}
  borderStyle={null}
  borderWidth={null}
  boxSizing={null}
  color={Object {}}
  display={null}
  flex={null}
  flexWrap={null}
  height="0px"
  justifyContent={null}
  margin={null}
  mediaWidth={null}
  minHeight={null}
  minWidth={null}
  overflowX={null}
  overflowY={null}
  padding={null}
  position={null}
  responsiveAlignSecurities={null}
  responsiveJustifyContent={null}
  responsiveMargin={null}
  responsivePadding={null}
  responsivePosition={null}
  responsiveWidth={null}
  separator={false}
  themeColor="primary"
  width="100%"
>
  <BeatLoader
    color="#7367e6"
    loading={true}
    margin="2px"
    size="15px"
  />
</FlexColumn>
`;
